--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "reactotron-react-js": "^3.3.7",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^15.12.2",
